[package]
name = "percolator-stress-test"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "stress_test"
path = "src/main.rs"

[dependencies]
percolator = { path = "../percolator" }
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "thin"
